import java.util.List;
import java.util.Map;

public class App {
    private Map<String, Usuario> usuarios;
    private Map<String, Conversacion> conversaciones;

    public void enviarMensaje(Usuario emisor, Usuario receptor, Mensaje mensaje){

    }

    public List<ConversacionPrivada> buscarConversaciones(Usuario us, Usuario otroUs) {
        return null;
    }
}
